fix scrollbar issue windows

--- a/app/[userId]/components/mailbox/mail_window.module.css
+++ b/app/[userId]/components/mailbox/mail_window.module.css
@@ -39,4 +39,5 @@
 
 .mailWindowContainer {
     scrollbar-gutter: stable both-edges;
+    scrollbar-width: 0;
 }
